Fix avatar in notification align

--- a/app/less/element/_input_dropdown.less
+++ b/app/less/element/_input_dropdown.less
@@ -301,6 +301,7 @@
       .avatar-block {
         position: relative;
         margin-right: 20px;
+        align-self: flex-start;
 
         .avatar-img {
           width: 30px;
